--- a/project/src/app/post/post.component.html
+++ b/project/src/app/post/post.component.html
@@ -1,11 +1,12 @@
 <p>post works!</p>
 <mat-card>
-
         <mat-form-field>
-                <textarea matInput rows="6" [(ngModel)]="enteredValue"> </textarea>
+                <input matInput type="text" [([(ngModel)]="enteredTitle">
+        </mat-form-field>
+        <mat-form-field>
+                <textarea matInput rows="6" [(ngModel)]="enteredContent"> </textarea>
         </mat-form-field>
         <button mat-raised-button color="primary" (click) = "addPost()" > save Post </button>
 
 </mat-card>
 
-{{newPost}}
